--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,11 @@
 }
 
 .footer{
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: rgba(16, 22, 31, 0.795);
+  background-color: rgba(171, 180, 206, 0.795);
   text-align: center;
-  color: white;
+  color: black;
 }
